@@ -13,7 +13,6 @@
   <packaging>pom</packaging>
 
   <modules>
-    <module>pack</module>
     <module>common-composite-component</module>
     <module>impl</module>
     <module>edu-person-api</module>
@@ -21,16 +20,14 @@
     <module>type-api</module>
     <module>privacy-api</module>
     <module>privacy-comp-impl</module>
-    <module>privacy-components</module>
     <module>privacy-hbm</module>
     <!-- module>privacy-integration-test</module -->
     <!-- archive and import -->
     <module>archive-api</module>
     <module>archive-impl/impl2</module>
-    <module>archive-impl/pack</module>
     <module>import-impl</module>
-    <module>import-handlers/content-handlers</module>
     <module>import-pack</module>
+    <module>import-handlers/content-handlers</module>
     <module>import-util</module>
     <module>import-parsers/common-cartridge</module>
     <module>import-parsers/sakai-archive</module>
@@ -38,15 +35,6 @@
     <module>import-parsers/blackboard_6/api</module>
     <module>import-parsers/blackboard_6/impl</module>
   </modules>
-
-
-  <distributionManagement>
-    <site>
-      <id>sakai-site</id>
-      <name>Sakai release Site</name>
-      <url>scpexe://source.sakaiproject.org/var/www/html/release/common/${project.version}</url>
-    </site>
-  </distributionManagement>
 
   <dependencyManagement>
     <dependencies>
@@ -149,11 +137,6 @@
       </dependency>
       <!-- external dependencies -->
       <dependency>
-        <groupId>commons-beanutils</groupId>
-        <artifactId>commons-beanutils</artifactId>
-        <version>1.7.0</version>
-      </dependency>
-      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-compress</artifactId>
         <version>1.6</version>
@@ -165,34 +148,4 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <debug>true</debug>
-          <links>
-            <link>http://download.oracle.com/javase/6/docs/api/</link>
-          </links>
-          <breakiterator>true</breakiterator>
-          <verbose>false</verbose>
-          <aggregate>true</aggregate>
-          <minmemory>168m</minmemory>
-          <maxmemory>1024m</maxmemory>
-          <additionalJOption>-J-Xmx1024m -J-XX:MaxPermSize=128m</additionalJOption>
-          <!-- SAK-20961 exclude commented out test classes -->
-          <excludePackageNames>org.sakaiproject.api.common.edu.person:org.sakaiproject.api.common.type</excludePackageNames>
-        </configuration>
-      </plugin>
-      <plugin>
-        <inherited>true</inherited>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>2.11</version>
-      </plugin>
-    </plugins>
-  </reporting>
-
 </project>
